crates/cctui-tui/src/snapshots/cctui__view_snapshots__file_viewer_image_placeholder_with_dimensions.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1201
expression: render_screen(&mut app)
---
┌ shot.png — Esc closes, o opens in the desktop viewer ────────────────────────────────────────────┐
│[image: shot.png 8x8 139 B]                                                                       │
│                                                                                                  │
│o opens it in the desktop viewer, i toggles the inline preview                                    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
