crates/cctui-tui/src/snapshots/cctui__view_snapshots__harness_mode_picker.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ W┌ Harness mode ────────────────────────────────────────────────────────────────────────┐
     ●│❯ bg       in use                                                                     │
     ▾│  oneshot                                                                             │
      │  sdk                                                                                 │
   ▾ C│                                                                                      │
     ○│claude daemon drives a background PTY worker. Richest transcript, and the only mode   │
      │with a PTY fallback for prompts — but it depends on state.json and the on-disk JSONL  │
      │being there to read.                                                                  │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │ ↑↓ Pick  Enter Apply to every daemon  Esc Cancel                                     │
      └──────────────────────────────────────────────────────────────────────────────────────┘



 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
